[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Pillar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=4]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 176, 1088 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -1088 )
offset = Vector2( -176, 0 )
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_bottom = 1920
limit_smoothed = true
smoothing_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Pillars" type="Node2D" parent="."]
position = Vector2( 64, 944 )

[node name="Pillar" parent="Pillars" instance=ExtResource( 1 )]
position = Vector2( 16, 208 )

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
volume_db = -15.0
autoplay = true
bus = "Record"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="ParallaxBackground"]
margin_right = 1184.0
margin_bottom = 1936.0
color = Color( 0.431373, 0.619608, 0.690196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="initialize_bridge" from="." to="Pillars/Pillar" method="_on_MainScene_initialize_bridge"]
[connection signal="terminate_bridge" from="." to="Pillars/Pillar" method="_on_MainScene_terminate_bridge"]
[connection signal="landed" from="Pillars/Pillar" to="." method="_on_Pillar_landed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
